Update the prefixes for rcon2irc message forwarding

--- a/rcon2irc/hub-bitmissile-duel.conf
+++ b/rcon2irc/hub-bitmissile-duel.conf
@@ -8,11 +8,11 @@ irc_server = 176.9.65.177:39999
 # 176.9.65.177:39999
 irc_password = example
 irc_user = hub-
-irc_nickprefix = na-duel: 
-irc_nick = na-duel
-irc_nick_alternates = na-duel_ na-duel__
+irc_nickprefix = naduel: 
+irc_nick = naduel
+irc_nick_alternates = naduel_ naduel__
 irc_channel = #xonotic.hub
-irc_joinmessage = na-duel server is online!
+irc_joinmessage = naduel server is online!
 
 # uncomment for server administration via IRC
 #irc_admin_password = hackme
@@ -33,7 +33,7 @@ irc_quakenet_authusers = Samual
 plugins = joinsparts.pl
 
 # Alternate IRC trigger (can be used instead of nickname to send stuff to the server)
-irc_trigger = hub-all
+irc_trigger = huball
 
 # Custom output options
 irc_announce_slotsfree = 1
