Cleanup, and add flood.pl to plugins

--- a/rcon2irc/hub-bitmissile-duel.conf
+++ b/rcon2irc/hub-bitmissile-duel.conf
@@ -14,23 +14,14 @@ irc_nick_alternates = naduel_ naduel__
 irc_channel = #xonotic.hub
 irc_joinmessage = naduel server is online!
 
-# uncomment for server administration via IRC
-#irc_admin_password = hackme
-
-# IRC NickServ authentication (optional)
-#irc_nickserv_password = hackme
-
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
 #irc_quakenet_password = me
 # Users with a Q account listed here can use admin commands on the bot
 irc_quakenet_authusers = Samual
 
-# IRC on-connect commands
-#irc_commands = PRIVMSG Admin :hello, I am there; MODE $nick +x
-
 # Extra plug-ins to load
-plugins = joinsparts.pl
+plugins = joinsparts.pl flood.pl
 
 # Alternate IRC trigger (can be used instead of nickname to send stuff to the server)
 irc_trigger = huball
