Update rcon2irc configs

--- a/rcon2irc/hub-wtwrp-votable.conf
+++ b/rcon2irc/hub-wtwrp-votable.conf
@@ -1,19 +1,18 @@
 # DarkPlaces server data
-dp_server = 176.9.65.177:27000
+dp_server = 176.9.65.177:30002
 dp_password = replaceme
 
 # IRC configuration
-irc_server = irc.quakenet.org
-irc_nick = hub-eu-votable
-irc_nick_alternates = hub-eu-votable_ hub-eu-votable__
-irc_user = hubbot
+irc_server = 176.9.65.177:39999
+# 127.0.0.1:39999
+# 176.9.65.177:39999
+irc_password = example
+irc_user = hub-
+irc_nickprefix = navotable: 
+irc_nick = navotable
+irc_nick_alternates = navotable_ navotable__
 irc_channel = #xonotic.hub
-
-# uncomment for server administration via IRC
-#irc_admin_password = hackme
-
-# IRC NickServ authentication (optional)
-#irc_nickserv_password = hackme
+irc_joinmessage = navotable server is online!
 
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
@@ -21,37 +20,30 @@ irc_channel = #xonotic.hub
 # Users with a Q account listed here can use admin commands on the bot
 irc_quakenet_authusers = Samual
 
-# IRC on-connect commands
-#irc_commands = PRIVMSG Admin :hello, I am there; MODE $nick +x
-
 # Extra plug-ins to load
-#plugins =
+plugins = joinsparts.pl flood.pl
 
 # Alternate IRC trigger (can be used instead of nickname to send stuff to the server)
-irc_trigger = foobar
+irc_trigger = huball
 
 # Custom output options
-#irc_announce_slotsfree = 1
+irc_announce_slotsfree = 1
 # The var irc_announce_mapchange can be set to either never, notempty or always
-#irc_announce_mapchange = always
+irc_announce_mapchange = notempty
 
 # Tuning
+dp_game = Xonotic
 dp_secure = 1
-#dp_secure_challengetimeout = 1
-#dp_server_from_wan =
-#dp_listen = 
-#dp_listen_from_server =
+dp_server_from_wan = xonotic.bitmissile.com
+#dp_listen = 176.9.65.177
 #dp_status_delay = 30
-#dp_utf8_enable = 1
-#dp_timinglog = timing.log
 #irc_reconnect_delay = 300
+dp_listen_from_server = 176.9.65.177
 #irc_admin_timeout = 3600
 #irc_admin_quote_re =
-#irc_local = 
-#irc_ping_delay = 120
-#irc_nickserv_identify = PRIVMSG NickServ :IDENTIFY %2$s
-#irc_nickserv_ghost = PRIVMSG NickServ :GHOST %1$s %2$s
-#irc_nickserv_ghost_attempts = 3
+#irc_local = 0
+dp_utf8_enable = 1
+#irc_ping_delay = 300
 #irc_quakenet_getchallenge = PRIVMSG Q@CServe.quakenet.org :CHALLENGE
 #irc_quakenet_challengeauth = PRIVMSG Q@CServe.quakenet.org :CHALLENGEAUTH
 #irc_quakenet_challengeprefix = :Q!TheQBot@CServe.quakenet.org NOTICE [^:]+ :CHALLENGE
@@ -61,6 +53,3 @@ dp_secure = 1
 #irc_nickserv_identify = AUTHSERV AUTH myauthname %2$s
 #irc_nickserv_ghost =
 #irc_nickserv_ghost_attempts = 0
-
-# Example: connect to a non-secure DP server
-#dp_secure = 0
