Update irc network for smb server profile

--- a/configs.pk3dir/profile-smb.cfg
+++ b/configs.pk3dir/profile-smb.cfg
@@ -11,7 +11,7 @@ hostname "${_servertag} ${_version}${_description} (${_continent_small})"
 
 set _motd_intro "Welcome to the ${hostname}"
 set _motd_administrator "the HUB server group"
-set _motd_contact "samual@xonotic.org or irc.freenode.org : #xonotic.hub"
+set _motd_contact "samual@xonotic.org or irc.quakenet.org : #xonotic.hub"
 set _motd_host "named ${_servername} : Provided by smbclan.net"
 set _motd_location "${_location} (${_continent})"
 sv_motd "^7${_motd_intro}\n^7${_motd_description}\n^2Administrated by ${_motd_administrator}\n^2Contact at ${_motd_contact}\n^2Server ${_motd_host} in ${_motd_location}"
