--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -35,7 +35,7 @@ alias do_restart_1 "restart"
 alias do_restart_0 "echo NOTE: Still initializing, not restarting match"
 alias do_restart "do_restart_${_done_initializing}"
 
-alias votable_alias "add_extra_vote \"${1}\"; alias ${* ?}; echo \"${* ?}\""
+alias votable_alias "add_extra_vote \"${1 asis}\"; alias ${* ?}; echo \"normal: ${1}\"; echo \"asis: ${1 asis}\""
 
 
 // =======================
