Even moreeeeeeee debug!

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -23,7 +23,7 @@ alias check_aev_${_allow_extra_votes} "set _allow_extra_votes 0"; check_aev_${_a
 // if _allow_extra_votes is set, then votes for game modes and mutators and other options for the server will be added.
 alias add_extra_vote_1 "addvote ${*}"
 alias add_extra_vote_0 "echo NOTE: Extra votes are disabled, skipping \"${*}\""
-alias add_extra_vote "add_extra_vote_${_allow_extra_votes} ${*}"
+alias add_extra_vote "add_extra_vote_${_allow_extra_votes} ${*}; echo \"add_extra_vote: ${*}\""
 
 // conditional command: run endmatch only when no longer initializing (loading map)
 alias do_endmatch_1 "endmatch"
@@ -35,7 +35,7 @@ alias do_restart_1 "restart"
 alias do_restart_0 "echo NOTE: Still initializing, not restarting match"
 alias do_restart "do_restart_${_done_initializing}"
 
-alias votable_alias "add_extra_vote \"${1 asis}\"; alias ${* ?}; echo \"normal: ${1}\"; echo \"asis: ${1 asis}\""
+alias votable_alias "add_extra_vote \"${1 asis}\"; alias ${* ?}; echo \"votable_alias: ${1}\""
 
 
 // =======================
