Figured out the problem, fixed ordering and removed debug stuff

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -21,9 +21,9 @@ alias check_aev_${_allow_extra_votes} "set _allow_extra_votes 0"; check_aev_${_a
 //  Other supporting aliases
 // ==========================
 // if _allow_extra_votes is set, then votes for game modes and mutators and other options for the server will be added.
-alias add_extra_vote_1 "addvote ${*}"
+alias add_extra_vote_1 "echo \"add_extra_vote: \"${*}\"\"; addvote ${*}"
 alias add_extra_vote_0 "echo NOTE: Extra votes are disabled, skipping \"${*}\""
-alias add_extra_vote "add_extra_vote_${_allow_extra_votes} ${*}; echo \"add_extra_vote: ${*}\""
+alias add_extra_vote "add_extra_vote_${_allow_extra_votes} ${*}"
 
 // conditional command: run endmatch only when no longer initializing (loading map)
 alias do_endmatch_1 "endmatch"
@@ -35,7 +35,7 @@ alias do_restart_1 "restart"
 alias do_restart_0 "echo NOTE: Still initializing, not restarting match"
 alias do_restart "do_restart_${_done_initializing}"
 
-alias votable_alias "add_extra_vote \"${1 asis}\"; alias ${* ?}; echo \"votable_alias: ${1}\""
+alias votable_alias "add_extra_vote ${1}; alias ${* ?}"
 
 
 // =======================
@@ -48,6 +48,20 @@ _voting_enabled_${_allow_extra_votes}
 set _description "${_hooked_desc}"
 set _motd_description "${_description} ${_hooked_type} server with ${_voting_string}"
 exec profile-${_hooked_profile}.cfg
+
+
+// ===========================================
+//  Miscellaneous voting settings and aliases
+// ===========================================
+sv_vote_commands "restart fraglimit chmap gotomap nextmap endmatch reducematchtime extendmatchtime allready kick cointoss movetoteam_auto"
+sv_vote_call 1 // 0 will disable the normal voting
+sv_vote_master 0 // 0 will disable voting to become master, good if you prefer to use the master password instead
+
+votable_alias warmup "toggle g_warmup; do_restart"
+votable_alias enablebots "minplayers 4"
+votable_alias nobots "minplayers 0; bot_number 0"
+
+add_extra_vote "shuffleteams teamplay_mode g_maxplayers timelimit g_shootfromeye g_shootfromcenter"
 
 
 // =======================
@@ -274,20 +288,6 @@ votable_alias sv_fbskin_rainbow "sv_defaultcharacter 1; sv_defaultplayermodel ${
 
 // use sv_fbskin_unique by default
 sv_fbskin_unique
-
-
-// ===========================================
-//  Miscellaneous voting settings and aliases
-// ===========================================
-sv_vote_commands "restart fraglimit chmap gotomap nextmap endmatch reducematchtime extendmatchtime allready kick cointoss movetoteam_auto"
-sv_vote_call 1 // 0 will disable the normal voting
-sv_vote_master 0 // 0 will disable voting to become master, good if you prefer to use the master password instead
-
-votable_alias warmup "toggle g_warmup; do_restart"
-votable_alias enablebots "minplayers 4"
-votable_alias nobots "minplayers 0; bot_number 0"
-
-add_extra_vote "shuffleteams teamplay_mode g_maxplayers timelimit g_shootfromeye g_shootfromcenter"
 
 
 // ===================
