--- a/rcon2irc/hub-wtwrp-votable.conf
+++ b/rcon2irc/hub-wtwrp-votable.conf
@@ -8,11 +8,11 @@ irc_server = 176.9.65.177:39999
 # 176.9.65.177:39999
 irc_password = example
 irc_user = hub-
-irc_nickprefix = navotable: 
-irc_nick = navotable
-irc_nick_alternates = navotable_ navotable__
+irc_nickprefix = euvotable: 
+irc_nick = euvotable
+irc_nick_alternates = euvotable_ euvotable__
 irc_channel = #xonotic.hub
-irc_joinmessage = navotable server is online!
+irc_joinmessage = euvotable server is online!
 
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
