Add some debug ideas

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -35,7 +35,7 @@ alias do_restart_1 "restart"
 alias do_restart_0 "echo NOTE: Still initializing, not restarting match"
 alias do_restart "do_restart_${_done_initializing}"
 
-alias votable_alias "add_extra_vote ${1}; alias $${* asis}"
+alias votable_alias "add_extra_vote ${1}; alias ${* asis}"
 
 
 // =======================
@@ -154,7 +154,7 @@ alias public-ons      "_maplist_all;   gametype ons;    "
 // ========================
 //  Core game mode aliases
 // ========================
-votable_alias duel        "${_hooked_type}_settings;  ${_hooked_type}-duel;   do_endmatch"
+votable_alias duel        "echo \"Test: ${_hooked_type} $${_hooked_type} $${_hooked_type}\"; ${_hooked_type}_settings;  ${_hooked_type}-duel;   do_endmatch"
 votable_alias dm          "${_hooked_type}_settings;  ${_hooked_type}-dm;     do_endmatch"
 votable_alias freezetag   "${_hooked_type}_settings;  ${_hooked_type}-ft;     do_endmatch"
 votable_alias tdm         "${_hooked_type}_settings;  ${_hooked_type}-tdm;    do_endmatch"
