Try some abstraction, hopefully this works

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -149,25 +149,27 @@ alias public-lms      "_maplist_all;   gametype lms;    "
 alias public-ons      "_maplist_all;   gametype ons;    "
 
 // TODO: Add Race/CTS, also add g_balance_kill_delay 0 along with it
+alias _change_gametype "${_hooked_type}-${1}"
+alias _change_settings "${_hooked_type}_settings"
 
 
 // ========================
 //  Core game mode aliases
 // ========================
-votable_alias duel        "echo \"Test: ${_hooked_type} $${_hooked_type} $${_hooked_type}\"; ${_hooked_type}_settings;  ${_hooked_type}-duel;   do_endmatch"
-votable_alias dm          "${_hooked_type}_settings;  ${_hooked_type}-dm;     do_endmatch"
-votable_alias freezetag   "${_hooked_type}_settings;  ${_hooked_type}-ft;     do_endmatch"
-votable_alias tdm         "${_hooked_type}_settings;  ${_hooked_type}-tdm;    do_endmatch"
-votable_alias ctf         "${_hooked_type}_settings;  ${_hooked_type}-ctf;    do_endmatch"
-votable_alias ca          "${_hooked_type}_settings;  ${_hooked_type}-ca;     do_endmatch"
-votable_alias assault     "${_hooked_type}_settings;  ${_hooked_type}-as;     do_endmatch"
-votable_alias keepaway    "${_hooked_type}_settings;  ${_hooked_type}-ka;     do_endmatch"
-votable_alias nexball     "${_hooked_type}_settings;  ${_hooked_type}-nb;     do_endmatch"
-votable_alias domination  "${_hooked_type}_settings;  ${_hooked_type}-dom;    do_endmatch"
-votable_alias keyhunt     "${_hooked_type}_settings;  ${_hooked_type}-kh;     do_endmatch"
-votable_alias arena       "${_hooked_type}_settings;  ${_hooked_type}-arena;  do_endmatch"
-votable_alias lms         "${_hooked_type}_settings;  ${_hooked_type}-lms;    do_endmatch"
-votable_alias onslaught   "${_hooked_type}_settings;  ${_hooked_type}-ons;    do_endmatch"
+votable_alias duel        "_change_settings;  _change_gametype duel;   do_endmatch"
+votable_alias dm          "_change_settings;  _change_gametype dm;     do_endmatch"
+votable_alias freezetag   "_change_settings;  _change_gametype ft;     do_endmatch"
+votable_alias tdm         "_change_settings;  _change_gametype tdm;    do_endmatch"
+votable_alias ctf         "_change_settings;  _change_gametype ctf;    do_endmatch"
+votable_alias ca          "_change_settings;  _change_gametype ca;     do_endmatch"
+votable_alias assault     "_change_settings;  _change_gametype as;     do_endmatch"
+votable_alias keepaway    "_change_settings;  _change_gametype ka;     do_endmatch"
+votable_alias nexball     "_change_settings;  _change_gametype nb;     do_endmatch"
+votable_alias domination  "_change_settings;  _change_gametype dom;    do_endmatch"
+votable_alias keyhunt     "_change_settings;  _change_gametype kh;     do_endmatch"
+votable_alias arena       "_change_settings;  _change_gametype arena;  do_endmatch"
+votable_alias lms         "_change_settings;  _change_gametype lms;    do_endmatch"
+votable_alias onslaught   "_change_settings;  _change_gametype ons;    do_endmatch"
 
 votable_alias as "assault"
 votable_alias dom "domination"
@@ -185,19 +187,19 @@ votable_alias nb "nexball"
 //  modeNonN
 
 alias add_alias_2v2_variant "alias ${1}2v2 \"2v2${1}\"; alias ${1}2on2 \"2v2${1}\"; alias 2on2${1} \"2v2${1}\""
-alias add_alias_2v2 "alias 2v2${1} \"${_hooked_type}_settings; ${_hooked_type}-${1}; g_maxplayers 4;   do_endmatch\"; add_alias_2v2_variant ${1}; add_extra_vote \"2v2${1} 2on2${1} ${1}2v2 ${1}2on2\""
+alias add_alias_2v2 "alias 2v2${1} \"_change_settings; _change_gametype ${1}; g_maxplayers 4;   do_endmatch\"; add_alias_2v2_variant ${1}; add_extra_vote \"2v2${1} 2on2${1} ${1}2v2 ${1}2on2\""
 
 alias add_alias_3v3_variant "alias ${1}3v3 \"3v3${1}\"; alias ${1}3on3 \"3v3${1}\"; alias 3on3${1} \"3v3${1}\""
-alias add_alias_3v3 "alias 3v3${1} \"${_hooked_type}_settings; ${_hooked_type}-${1}; g_maxplayers 6;   do_endmatch\"; add_alias_3v3_variant ${1}; add_extra_vote \"3v3${1} 3on3${1} ${1}3v3 ${1}3on3\""
+alias add_alias_3v3 "alias 3v3${1} \"_change_settings; _change_gametype ${1}; g_maxplayers 6;   do_endmatch\"; add_alias_3v3_variant ${1}; add_extra_vote \"3v3${1} 3on3${1} ${1}3v3 ${1}3on3\""
 
 alias add_alias_4v4_variant "alias ${1}4v4 \"4v4${1}\"; alias ${1}4on4 \"4v4${1}\"; alias 4on4${1} \"4v4${1}\""
-alias add_alias_4v4 "alias 4v4${1} \"${_hooked_type}_settings; ${_hooked_type}-${1}; g_maxplayers 8;   do_endmatch\"; add_alias_4v4_variant ${1}; add_extra_vote \"4v4${1} 4on4${1} ${1}4v4 ${1}4on4\""
+alias add_alias_4v4 "alias 4v4${1} \"_change_settings; _change_gametype ${1}; g_maxplayers 8;   do_endmatch\"; add_alias_4v4_variant ${1}; add_extra_vote \"4v4${1} 4on4${1} ${1}4v4 ${1}4on4\""
 
 alias add_alias_5v5_variant "alias ${1}5v5 \"5v5${1}\"; alias ${1}5on5 \"5v5${1}\"; alias 5on5${1} \"5v5${1}\""
-alias add_alias_5v5 "alias 5v5${1} \"${_hooked_type}_settings; ${_hooked_type}-${1}; g_maxplayers 10;  do_endmatch\"; add_alias_5v5_variant ${1}; add_extra_vote \"5v5${1} 5on5${1} ${1}5v5 ${1}5on5\""
+alias add_alias_5v5 "alias 5v5${1} \"_change_settings; _change_gametype ${1}; g_maxplayers 10;  do_endmatch\"; add_alias_5v5_variant ${1}; add_extra_vote \"5v5${1} 5on5${1} ${1}5v5 ${1}5on5\""
 
 alias add_alias_6v6_variant "alias ${1}6v6 \"6v6${1}\"; alias ${1}6on6 \"6v6${1}\"; alias 6on6${1} \"6v6${1}\""
-alias add_alias_6v6 "alias 6v6${1} \"${_hooked_type}_settings; ${_hooked_type}-${1}; g_maxplayers 12;  do_endmatch\"; add_alias_6v6_variant ${1}; add_extra_vote \"6v6${1} 6on6${1} ${1}6v6 ${1}6on6\""
+alias add_alias_6v6 "alias 6v6${1} \"_change_settings; _change_gametype ${1}; g_maxplayers 12;  do_endmatch\"; add_alias_6v6_variant ${1}; add_extra_vote \"6v6${1} 6on6${1} ${1}6v6 ${1}6on6\""
 
 alias add_alias_NvN "add_alias_2v2 $1; add_alias_3v3 $1; add_alias_4v4 $1; add_alias_5v5 $1; add_alias_6v6 $1"
 
