add 6 bots for keyhunt, not 4

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -128,7 +128,7 @@ alias pickup-assault  "_maplist_all;   gametype as;     g_weapon_stay 1"
 alias pickup-ka       "_maplist_all;   gametype ka;     "
 alias pickup-nb       "_maplist_all;   gametype nb;     "
 alias pickup-dom      "_maplist_all;   gametype dom;    "
-alias pickup-kh       "_maplist_all;   gametype kh;     "
+alias pickup-kh       "_maplist_all;   gametype kh;     minplayers 6"
 alias pickup-arena    "_maplist_all;   gametype arena;  "
 alias pickup-lms      "_maplist_all;   gametype lms;    "
 alias pickup-ons      "_maplist_all;   gametype ons;    "
@@ -143,7 +143,7 @@ alias public-assault  "_maplist_all;   gametype as;     "
 alias public-ka       "_maplist_all;   gametype ka;     "
 alias public-nb       "_maplist_all;   gametype nb;     "
 alias public-dom      "_maplist_all;   gametype dom;    "
-alias public-kh       "_maplist_all;   gametype kh;     "
+alias public-kh       "_maplist_all;   gametype kh;     minplayers 6"
 alias public-arena    "_maplist_all;   gametype arena;  "
 alias public-lms      "_maplist_all;   gametype lms;    "
 alias public-ons      "_maplist_all;   gametype ons;    "
