Add rcon2irc: prefix to joinmessage

--- a/rcon2irc/hub-bitmissile-duel.conf
+++ b/rcon2irc/hub-bitmissile-duel.conf
@@ -12,7 +12,7 @@ irc_nickprefix = naduel:
 irc_nick = naduel
 irc_nick_alternates = naduel_ naduel__
 irc_channel = #xonotic.hub
-irc_joinmessage = naduel server is online!
+irc_joinmessage = rcon2irc: naduel server is online!
 
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
