--- a/rcon2irc/hub-bitmissile-votable.conf
+++ b/rcon2irc/hub-bitmissile-votable.conf
@@ -12,7 +12,7 @@ irc_nickprefix = navotable:
 irc_nick = navotable
 irc_nick_alternates = navotable_ navotable__
 irc_channel = #xonotic.hub
-irc_joinmessage = navotable server is online!
+irc_joinmessage = rcon2irc: navotable server is online!
 
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
