--- a/rcon2irc/hub-wtwrp-duel.conf
+++ b/rcon2irc/hub-wtwrp-duel.conf
@@ -12,7 +12,7 @@ irc_nickprefix = euduel:
 irc_nick = euduel
 irc_nick_alternates = euduel_ euduel__
 irc_channel = #xonotic.hub
-irc_joinmessage = euduel server is online!
+irc_joinmessage = rcon2irc: euduel server is online!
 
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
