--- a/rcon2irc/hub-wtwrp-ft.conf
+++ b/rcon2irc/hub-wtwrp-ft.conf
@@ -12,7 +12,7 @@ irc_nickprefix = euft:
 irc_nick = euft
 irc_nick_alternates = euft_ euft__
 irc_channel = #xonotic.hub
-irc_joinmessage = euft server is online!
+irc_joinmessage = rcon2irc: euft server is online!
 
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
