--- a/rcon2irc/hub-wtwrp-votable.conf
+++ b/rcon2irc/hub-wtwrp-votable.conf
@@ -12,7 +12,7 @@ irc_nickprefix = euvotable:
 irc_nick = euvotable
 irc_nick_alternates = euvotable_ euvotable__
 irc_channel = #xonotic.hub
-irc_joinmessage = euvotable server is online!
+irc_joinmessage = rcon2irc: euvotable server is online!
 
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
