--- a/rcon2irc/hub-smb-votable.conf
+++ b/rcon2irc/hub-smb-votable.conf
@@ -12,7 +12,7 @@ irc_nickprefix = auvotable:
 irc_nick = auvotable
 irc_nick_alternates = auvotable_ auvotable__
 irc_channel = #xonotic.hub
-irc_joinmessage = auvotable server is online!
+irc_joinmessage = rcon2irc: auvotable server is online!
 
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
