--- a/rcon2irc/hub-wtwrp-lms.conf
+++ b/rcon2irc/hub-wtwrp-lms.conf
@@ -12,7 +12,7 @@ irc_nickprefix = eulms:
 irc_nick = eulms
 irc_nick_alternates = eulms_ eulms__
 irc_channel = #xonotic.hub
-irc_joinmessage = eulms server is online!
+irc_joinmessage = rcon2irc: eulms server is online!
 
 # IRC Quakenet challenge/response authentication (optional)
 #irc_quakenet_authname = hack
