--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -94,7 +94,7 @@ alias _maplist_tdm   "g_maplist \"afterslime atelier breath_b7 dreadfulplace_v1 
 //  public_settings is used for casual servers
 // important note:
 //  if a gametype alias from down below uses a cvar, its default must be added to default_settings
-alias default_settings "_nomutators; exec balanceXonotic.cfg; g_powerups 1; g_start_delay 0; g_pickup_respawntime_weapon 10; g_weapon_stay 0; fraglimit_override -1; timelimit_overtimes 0; timelimit_override -1; g_shootfromeye 0; g_shootfromcenter 0; g_forced_respawn 0; g_warmup 0; g_chat_nospectators 0; teamplay_mode 4; sv_vote_nospectators 0; g_balance_teams 1; sv_autoscreenshot 0"
+alias default_settings "_nomutators; exec balanceXonotic.cfg; g_spawnshieldtime 0; g_maxplayers 0; g_powerups 1; g_start_delay 0; g_pickup_respawntime_weapon 10; g_weapon_stay 0; fraglimit_override -1; timelimit_overtimes 0; timelimit_override -1; g_shootfromeye 0; g_shootfromcenter 0; g_forced_respawn 0; g_warmup 0; g_chat_nospectators 0; teamplay_mode 4; sv_vote_nospectators 0; g_balance_teams 1; sv_autoscreenshot 0"
 votable_alias tourney_settings "default_settings; _hooked_type tourney; exec balanceXPM.cfg; nobots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; sv_vote_nospectators 1; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
 votable_alias pickup_settings "default_settings; _hooked_type pickup; exec balanceXPM.cfg; enablebots; g_start_delay 30; fraglimit_override 0; timelimit_overtimes 2; g_forced_respawn 1; g_warmup 1; g_chat_nospectators 2; teamplay_mode 2; g_balance_teams 0; sv_autoscreenshot 1" 
 votable_alias public_settings "default_settings; _hooked_type public; enablebots; g_start_delay 15"
@@ -103,7 +103,7 @@ votable_alias public_settings "default_settings; _hooked_type public; enablebots
 // ===========================
 //  Specific gametype options
 // ===========================
-alias tourney-duel     "_maplist_duel;  gametype dm;     g_maxplayers 2; g_powerups 0; timelimit_override 15"
+alias tourney-duel     "_maplist_duel;  gametype dm;     g_spawnshieldtime 0; g_maxplayers 2; g_powerups 0; timelimit_override 15"
 alias tourney-dm       "_maplist_dm;    gametype dm;     "
 alias tourney-ft       "_maplist_all;   gametype ft;     "
 alias tourney-tdm      "_maplist_tdm;   gametype tdm;    g_pickup_respawntime_weapon 15"
@@ -118,7 +118,7 @@ alias tourney-arena    "_maplist_all;   gametype arena;  "
 alias tourney-lms      "_maplist_all;   gametype lms;    "
 alias tourney-ons      "_maplist_all;   gametype ons;    "
 
-alias pickup-duel     "_maplist_duel;  gametype dm;     minplayers 2; g_maxplayers 2; g_powerups 0; timelimit_override 10"
+alias pickup-duel     "_maplist_duel;  gametype dm;     g_spawnshieldtime 0; minplayers 2; g_maxplayers 2; g_powerups 0; timelimit_override 10"
 alias pickup-dm       "_maplist_dm;    gametype dm;     "
 alias pickup-ft       "_maplist_all;   gametype ft;     "
 alias pickup-tdm      "_maplist_tdm;   gametype tdm;    "
