Some minor updates (restart after countdown now that it is fixed, add timelimit override 20 for CTF, etc)

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -107,7 +107,7 @@ alias tourney-duel     "_maplist_duel;  gametype dm;     g_spawnshieldtime 0; g_
 alias tourney-dm       "_maplist_dm;    gametype dm;     "
 alias tourney-ft       "_maplist_all;   gametype ft;     "
 alias tourney-tdm      "_maplist_tdm;   gametype tdm;    g_pickup_respawntime_weapon 15"
-alias tourney-ctf      "_maplist_ctf;   gametype ctf;    g_pickup_respawntime_weapon 5"
+alias tourney-ctf      "_maplist_ctf;   gametype ctf;    timelimit_override 20; g_pickup_respawntime_weapon 5"
 alias tourney-ca       "_maplist_ca;    gametype ca;     teamplay_mode 1"
 alias tourney-assault  "_maplist_all;   gametype as;     g_weapon_stay 1"
 alias tourney-ka       "_maplist_all;   gametype ka;     "
@@ -122,7 +122,7 @@ alias pickup-duel     "_maplist_duel;  gametype dm;     g_spawnshieldtime 0; min
 alias pickup-dm       "_maplist_dm;    gametype dm;     "
 alias pickup-ft       "_maplist_all;   gametype ft;     "
 alias pickup-tdm      "_maplist_tdm;   gametype tdm;    "
-alias pickup-ctf      "_maplist_ctf;   gametype ctf;    "
+alias pickup-ctf      "_maplist_ctf;   gametype ctf;    timelimit_override 20"
 alias pickup-ca       "_maplist_ca;    gametype ca;     teamplay_mode 1"
 alias pickup-assault  "_maplist_all;   gametype as;     g_weapon_stay 1"
 alias pickup-ka       "_maplist_all;   gametype ka;     "
@@ -137,7 +137,7 @@ alias public-duel     "_maplist_duel;  gametype dm;     minplayers 2; g_maxplaye
 alias public-dm       "_maplist_dm;    gametype dm;     "
 alias public-ft       "_maplist_all;   gametype ft;     "
 alias public-tdm      "_maplist_tdm;   gametype tdm;    "
-alias public-ctf      "_maplist_ctf;   gametype ctf;    "
+alias public-ctf      "_maplist_ctf;   gametype ctf;    timelimit_override 20"
 alias public-ca       "_maplist_ca;    gametype ca;     teamplay_mode 1"
 alias public-assault  "_maplist_all;   gametype as;     "
 alias public-ka       "_maplist_all;   gametype ka;     "
@@ -331,6 +331,7 @@ g_playerstats_uri "http://stats.xonotic.org/stats/submit ${_hooked_profile}${ses
 //  Game setup
 // ============
 // now that the aliases and commands exist, lets set up the gameplay settings
+sv_ready_restart_after_countdown 1
 _hooked_commands // finally execute a chosen game mode from the aliases.cfg file
 
 
