Don't allow taunts on the hub servers

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -331,6 +331,7 @@ g_playerstats_uri "http://stats.xonotic.org/stats/submit ${_hooked_profile}${ses
 //  Game setup
 // ============
 // now that the aliases and commands exist, lets set up the gameplay settings
+sv_taunt 0
 sv_ready_restart_after_countdown 1
 _hooked_commands // finally execute a chosen game mode from the aliases.cfg file
 
