--- a/configs.pk3dir/profile-reliablesite.cfg
+++ b/configs.pk3dir/profile-reliablesite.cfg
@@ -2,7 +2,7 @@
 // Server information
 // ====================
 set _servername "newyorkduel"
-set _servertag "[HUB]New York Duel #1"
+set _servertag "[HUB]"
 set _continent "North America"
 set _continent_small "NA"
 set _location "New YorK"
