--- a/configs.pk3dir/profile-reliablesite.cfg
+++ b/configs.pk3dir/profile-reliablesite.cfg
@@ -5,8 +5,8 @@ set _servername "newyorkduel"
 set _servertag "[HUB]"
 set _continent "North America"
 set _continent_small "NA"
-set _location "New YorK"
-set _version "Git "
+set _location "New York"
+set _version "Git"
 hostname "${_servertag} ${_version}${_description} (${_continent_small})"
 
 set _motd_intro "Welcome to the ${hostname}"
