Disable recent map limitation
Change is from Halogene.
I did not verify anything of it.

--- a/configs.pk3dir/sv-hookable.cfg
+++ b/configs.pk3dir/sv-hookable.cfg
@@ -68,7 +68,9 @@ add_extra_vote "shuffleteams teamplay_mode g_maxplayers timelimit g_shootfromeye
 //  Settings for maplists
 // =======================
 g_maplist "" // clear any pre-existing option, we'll set the maplist later when setting game mode
-g_maplist_mostrecent_count 2
+g_maplist_mostrecent_count ""
+g_maplist_mostrecent ""
+
 g_maplist_check_waypoints 0 // set this to 1 to skip maps without waypoints if there aren't enough players to play without bots
 g_maplist_votable 6
 g_maplist_votable_abstain 1
